@@ -28,7 +28,7 @@ content = /pm_to_blib
 content = *.o
 content = *.bs
 content = /_eumm/
-content = {{$dist->name}}-*
+content = /{{$dist->name}}-*
 
 [License]
 
