@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - add minting profile
 
 0.007     2015-07-27 13:01:26 EDT
   - add Git::Contributors and MetaNoIndex for better metadata
